cluster/realliance.net/home.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels:
    app: home
    service: web
spec:
  replicas: 2
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      namespace: realliance
      labels:
        app: home
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
      containers:
        - name: home
          image: quay.io/realliance/realliance.net:2.3@sha256:7405276fcd58b6ade36c76147a23dfaba6eac6287880c14e37160d032961e359
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 5Mi
              cpu: 5m
            limits:
              memory: 5Mi
              cpu: 5m
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
---
apiVersion: v1
kind: Service
metadata:
  name: home
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: home
